# echo

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
echo-localfiles/: Cargo.toml
echo-localfiles/src/: lib.rs  library.rs  playlists.rs
echo-tui/: Cargo.toml
echo-tui/src/: app.rs  config.rs  event.rs  handler.rs  lib.rs  main.rs  tui.rs  ui.rs
echo-tui/src/app/: mod.rs  stateful_list.rs  stateful_table.rs
echo-tui/src/ui/: bottom.rs  center.rs  library.rs  mod.rs  playlists.rs  searchbar.rs
