[package]
name = "echo-localfiles"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Library for handling local music files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
