[package]
name = "echo-tui" 
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "TUI application"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
tracing.workspace = true
tracing-subscriber = "0.3.18"

# TUI 
crossterm = "0.27.0"
ratatui = "0.24.0"

# Config
confy = "0.5.1"
serde = { version = "1.0.193", features = ["derive"] }

