[package]
name = "echo-tui" 
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "TUI application"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
echo-localfiles = { path = "../echo-localfiles" }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow = "1.0.76"

# TUI 
crossterm = "0.27.0"
ratatui = "0.27.0"

# Config
confy = "0.6.1"
serde = { version = "1.0.193", features = ["derive"] }


